--- a/POO_07.ipynb
+++ b/POO_07.ipynb
@@ -25,13 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iswUOdZ-cICN",
-        "outputId": "0ca87134-b9f7-48ee-b9bf-e31ff7bed0cf"
+        "outputId": "9954cb54-0798-4942-9914-8b9a51812b02"
       },
       "outputs": [
         {
@@ -83,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gGTqO6HMeLL6",
-        "outputId": "015e2d6b-a3fa-4ead-e4e4-3ad1a5d72cd8"
+        "outputId": "fb199f2b-44c3-4b09-b66f-ad23e1aad178"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,16 +125,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6rO6YzFPgzik",
-        "outputId": "94b8d1c7-1e4f-4bb2-9d78-7e54895b227e"
+        "outputId": "294c86be-138b-420a-c571-8a08fd65768d"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cuantos hermanos tienes 0\n",
-            "No tienes hermanos\n"
+            "Cuantos hermanos tienes 3\n",
+            "Tienes 3 hermanos\n"
           ]
         }
       ]
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "Oq2bkL7Kk-o3"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "oAf-8uTQoNGP"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -199,23 +199,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fduqEmhgol6f",
-        "outputId": "10953a8e-7f28-48c9-910b-b9563886fd0f"
+        "outputId": "faf525e1-5dd7-4616-d41f-86b8a1c41239"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<__main__.perro at 0x7a7273f42d40>,\n",
-              " <__main__.gato at 0x7a7273f425f0>,\n",
-              " <__main__.vaca at 0x7a7273f43e80>,\n",
-              " <__main__.cerdo at 0x7a7273f408b0>,\n",
-              " <__main__.pollo at 0x7a7273f43d00>]"
+              "[<__main__.perro at 0x7d0d49701960>,\n",
+              " <__main__.gato at 0x7d0d49701990>,\n",
+              " <__main__.vaca at 0x7d0d49701840>,\n",
+              " <__main__.cerdo at 0x7d0d497018d0>,\n",
+              " <__main__.pollo at 0x7d0d497018a0>]"
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 6
         }
       ]
     },
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FO6UNKNwpQd6",
-        "outputId": "cb995f01-53ad-4ce5-b52e-b57ea2317a57"
+        "outputId": "0dcf8378-ddf2-451e-e921-b17813089aa9"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "Q8Gc8XmCrKvU"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -271,7 +271,7 @@
       "metadata": {
         "id": "rDpQ_m5XraRY"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -285,9 +285,9 @@
           "height": 35
         },
         "id": "q9Jqr_mcrl4b",
-        "outputId": "1a9e7ae1-b1f8-4e18-9fb0-d7b506c70143"
+        "outputId": "a0dd33a6-7654-4a8f-ab26-fdb1637870b1"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 10
         }
       ]
     },
@@ -314,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8DJcEMGrvl1",
-        "outputId": "d2e29ca6-b069-4b0d-9989-f12d3f18ca03"
+        "outputId": "1e5053b1-8a5a-430a-a626-c2597c815ff6"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +326,284 @@
             ]
           },
           "metadata": {},
-          "execution_count": 80
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Animal(): # objeto al que se le asignaran atributos\n",
+        "  def __init__(self): #init se refiere a inicializador, se usa con dos guiones. Entre parentesis (self) autoasignacion\n",
+        "    print(\"Animal class creada\")\n",
+        "\n",
+        "  def guess_who(self):\n",
+        "    print(\"Soy un animalito\")\n",
+        "\n",
+        "  def sleep(self):\n",
+        "    print(\"estoy durmiendo\")"
+      ],
+      "metadata": {
+        "id": "0dnA8ltkq0SN"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_animal=Animal()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yPkSJx9FsJSr",
+        "outputId": "69461262-e6b9-46d3-b5bc-93f4d38f357b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Animal class creada\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_animal.sleep()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BgcV2Yl8toCX",
+        "outputId": "4de3e7ba-d8ed-49c8-c109-a359c3a1ea16"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "estoy durmiendo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Cat(Animal):# esta nueva clase depende y se obtiene a partir de la clase anterior (clase maestra)\n",
+        "  def __init__(self):\n",
+        "    Animal.__init__(self) # se inicializa todo de la clase maestra dentro de la subordinada\n",
+        "    print(\"Cat class creada\")\n",
+        "\n",
+        "  def guess_who(self):\n",
+        "    print(\"soy un gatito\")\n",
+        "\n",
+        "  def meow(self):\n",
+        "    print(\"MEOW!\")"
+      ],
+      "metadata": {
+        "id": "Ua4w0j94vEtW"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_cat=Cat()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EJ_j0qfRw3T4",
+        "outputId": "88d9c211-962c-4079-d331-fa38afd51dd6"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Animal class creada\n",
+            "Cat class creada\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_cat.meow()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wrOrUTIHw6WB",
+        "outputId": "9c5ba3a9-2b61-4602-f550-d0db6e819807"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MEOW!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Polymorphism"
+      ],
+      "metadata": {
+        "id": "4zB-s0onw-EX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Doggy():\n",
+        "  def __init__(self,name,raza):\n",
+        "    self.name=name\n",
+        "    self.raza=raza\n",
+        "\n",
+        "  def speak(self):\n",
+        "    return self.name + \" dice WOOF\"\n"
+      ],
+      "metadata": {
+        "id": "7j0ga9doxABk"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Catty():\n",
+        "  def __init__(self,name,raza):\n",
+        "    self.name=name\n",
+        "    self.raza=raza\n",
+        "\n",
+        "  def speak(self):\n",
+        "    return self.name + \" dice MEOW\"\n"
+      ],
+      "metadata": {
+        "id": "PZfXRttuyhj8"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dog=Doggy(\"Buzz\",\"dalmata\")\n",
+        "my_cat=Catty(\"Tom\",\"gato\")"
+      ],
+      "metadata": {
+        "id": "O2vJij_4zO-m"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dog.speak()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "PqrB2gv4zJfF",
+        "outputId": "66ca49f7-f926-4113-80ab-2ed02be93f30"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Buzz dice WOOF'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_cat.speak()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "_qQm8o7a0B2B",
+        "outputId": "981b1fa5-c2ef-49ae-c9f4-67abad8f832a"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Tom dice MEOW'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dog.raza"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "0yQElJIn12HB",
+        "outputId": "8e427250-99d6-4d0d-f823-ff34748ad17a"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'dalmata'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 44
         }
       ]
     }
